--- a/css/style.css
+++ b/css/style.css
@@ -164,11 +164,9 @@ nav {
     outline: none;
 }
 
-.navbar .navbar-nav .nav-link:hover
-
-/*,
-.navbar .navbar-nav .nav-link.active */ {
-    color: var(--primary);
+.navbar .navbar-nav .nav-link:hover {
+    /*    color: var(--primary);*/
+    color: var(--secondary);
 }
 
 .navbar .dropdown-toggle::after {
@@ -212,6 +210,10 @@ nav .logoU {
     text-align: center;
 }
 
+.headerTitle2 {
+    display: none;
+}
+
 .fa-plus-square {
     font-size: 20px;
 }
@@ -220,6 +222,10 @@ nav .logoU {
 .mainC {
     -webkit-animation: jello-horizontal 0.9s both;
     animation: jello-horizontal 0.9s both;
+}
+
+.secondC {
+    display: none;
 }
 
 /*Carousel*/
@@ -313,7 +319,9 @@ nav .logoU {
 }
 
 .intro .row .col-lg-3 {
-    background-color: var(--light);
+    background: url("../img/bckg2.webp"), var(--light);
+    background-position: center;
+    background-size: cover;
     z-index: 5;
 }
 
@@ -335,12 +343,16 @@ nav .logoU {
 
 #about .wow {
     margin-top: -5px;
-    background-color: var(--light);
+    background: url("../img/bckg2.webp"), var(--light);
+    background-position: center;
+    background-size: cover;
     padding: 15px;
 }
 
 #about .logoBis {
-    background-color: var(--light);
+    background: url("../img/bckg2.webp"), var(--light);
+    background-position: center;
+    background-size: cover;
 }
 
 .iconIntro {
@@ -404,12 +416,12 @@ nav .logoU {
 }
 
 .event {
-    /*border: 1px solid var(--dark);*/
-    background-color: var(--light);
+    background: url("../img/bckg2.webp"), var(--light);
+    background-position: center;
+    background-size: cover;
     margin: 15px;
     padding: 15px;
     color: var(--primary);
-    border-radius: 7px;
 }
 
 .about3 {
@@ -431,7 +443,9 @@ nav .logoU {
 
 #about .fadeInUp {
     padding: 15px !important;
-    background-color: var(--light);
+    background: url("../img/bckg2.webp"), var(--light);
+    background-position: center;
+    background-size: cover;
 }
 
 #about h6 {
@@ -442,10 +456,6 @@ nav .logoU {
     display: flex;
     justify-content: center;
     margin-bottom: 25px;
-}
-
-.vidWrap iframe {
-    border-radius: 7px;
 }
 
 /***ACTU***/
@@ -607,7 +617,9 @@ nav .logoU {
 }
 
 .testiW {
-    background-color: var(--light);
+    background: url("../img/bckg2.webp"), var(--light);
+    background-position: center;
+    background-size: cover;
     padding: 15px;
 }
 
@@ -635,6 +647,33 @@ nav .logoU {
 
 .team-item {
     padding: 0.75rem;
+    background: url("../img/bckg2.webp"), var(--light);
+    background-position: center;
+    background-size: cover;
+    margin: 10px;
+}
+
+.team-item img {
+    transform: scale(1);
+    transition: 1s;
+}
+
+.team-item h5 {
+    transition: 0.5s;
+}
+
+.team-item:hover img {
+    transform: scale(1.05);
+    background: inherit !important;
+}
+
+.team-item:hover h5 {
+    color: var(--secondary);
+}
+
+.team-item .text-center {
+    padding: 0 !important;
+    min-height: 76px;
 }
 
 /*#équipe .title*/
@@ -701,7 +740,9 @@ section:not(#about, #intro) {
 
 /***FOOTER***/
 .footer {
-    background-color: var(--light) !important;
+    background: url("../img/bckg2.webp"), var(--light) !important;
+    background-position: center;
+    background-size: cover;
     padding: 10px;
     color: var(--dark) !important;
 }
@@ -960,10 +1001,22 @@ body:before {
 
 /***RESPONSIVE***/
 
+/*----------MAX : 1396-----------*/
+@media (max-width: 1396px) {
+    .mainC i {
+        margin: auto !important;
+        padding: 0 5px 0 5px;
+    }
+}
+
 /*----------MAX : 1250-----------*/
 @media (max-width: 1250px) {
     .headerTitle {
         display: none;
+    }
+    .headerTitle2 {
+        display: block;
+        font-size: 25px !important;
     }
 }
 
@@ -1000,6 +1053,13 @@ body:before {
 @media (max-width: 992px) {
     .border-end {
         border-right: 0 solid #dee2e6 !important;
+    }
+    .headerTitle {
+        display: block;
+        /*font-size: 25px !important;*/
+    }
+    .headerTitle2 {
+        display: none;
     }
 }
 
@@ -1044,13 +1104,41 @@ body:before {
         margin-top: -75px;
         z-index: 1;
     }
+    .mainC {
+        display: none;
+    }
+    .secondC {
+        display: block;
+    }
+
+    .intro .row .col-lg-3 {
+        margin: 25px !important;
+    }
+}
+
+/*----------MAX : 806-----------*/
+@media (max-width: 806px) {
+    .headerTitle {
+        display: none;
+    }
+    .headerTitle2 {
+        display: block;
+        font-size: 25px !important;
+    }
 }
 
 /*----------MAX : 768-----------*/
 @media (max-width: 768px) {
     #header-carousel .carousel-item {
         position: relative;
-        min-height: 450px;
+        min-height: 300px;
+    }
+
+    #header-carousel .carouIm1 {
+        object-position: center right;
+    }
+    #header-carousel .carouIm2 {
+        object-position: center left;
     }
 
     #header-carousel .carousel-item img {
@@ -1058,6 +1146,24 @@ body:before {
         width: 100%;
         height: 100%;
         object-fit: cover;
+    }
+    .introText1,
+    .introText2 {
+        margin: auto;
+    }
+    .introText1 h1,
+    .introText2 h1 {
+        font-size: 25px !important;
+        justify-self: center;
+    }
+}
+
+/*----------MAX : 560-----------*/
+@media (max-width: 560px) {
+    .introText1 h1,
+    .introText2 h1 {
+        font-size: 18px !important;
+        justify-self: center;
     }
 }
 
