--- a/css/style.css
+++ b/css/style.css
@@ -15,34 +15,27 @@
     text-transform: uppercase !important;
     font-size: 25px !important;
 }
-
 strong {
     font-weight: bold !important;
 }
-
 nav,
 footer {
     background-color: white !important;
     box-shadow: 2px 2px 7px 0.5px var(--dark) !important;
 }
-
 .text-white {
     color: var(--light);
 }
-
 .bg-light {
     background: unset !important;
 }
-
 .bg-primary {
     background-color: var(--primary) !important;
 }
-
 .py-6 {
     padding-top: 6rem;
     padding-bottom: 6rem;
 }
-
 .my-6 {
     margin-top: 6rem;
     margin-bottom: 6rem;
@@ -55,32 +48,26 @@ footer {
     background-color: var(--primary);
     border: var(--primary);
 }
-
 .btn.btn-primary,
 .btn.btn-outline-primary:hover {
     color: #ffffff;
 }
-
 .btn:hover {
     background-color: var(--secondary);
     border: var(--secondary);
 }
-
 .btn-square {
     width: 38px;
     height: 38px;
 }
-
 .btn-sm-square {
     width: 32px;
     height: 32px;
 }
-
 .btn-lg-square {
     width: 48px;
     height: 48px;
 }
-
 .btn-square,
 .btn-sm-square,
 .btn-lg-square {
@@ -90,7 +77,6 @@ footer {
     justify-content: center;
     font-weight: normal;
 }
-
 /*Back to top arrow*/
 .back-to-top {
     position: fixed;
@@ -102,11 +88,9 @@ footer {
     transition: 0.4s;
     border: none ! !important;
 }
-
 .back-to-top:hover {
     background-color: var(--secondary) !important;
 }
-
 .back-to-top:active,
 .back-to-top:focus,
 .back-to-top:visited {
@@ -120,13 +104,11 @@ footer {
     transition: opacity 0.5s ease-out, visibility 0s linear 0.5s;
     z-index: 99999;
 }
-
 #spinner.show {
     transition: opacity 0.5s ease-out, visibility 0s linear 0s;
     visibility: visible;
     opacity: 1;
 }
-
 #spinner .text-primary {
     background-color: var(--primary) !important;
 }
@@ -136,25 +118,20 @@ footer {
 nav {
     background-color: var(--light);
 }
-
 .navbar-nav {
     text-align: center;
 }
-
 .fa-plus-square {
     margin: 0 !important;
 }
-
 .navbar.sticky-top {
     top: -100px;
     transition: 0.5s;
 }
-
 .navbar .navbar-brand,
 .navbar a.btn {
     height: 80px;
 }
-
 .navbar .navbar-nav .nav-link {
     margin-right: 30px;
     padding: 25px 0;
@@ -163,12 +140,9 @@ nav {
     text-transform: uppercase;
     outline: none;
 }
-
 .navbar .navbar-nav .nav-link:hover {
-    /*    color: var(--primary);*/
     color: var(--secondary);
 }
-
 .navbar .dropdown-toggle::after {
     border: none;
     content: "\f107";
@@ -178,13 +152,11 @@ nav {
     margin-left: 8px;
     display: none;
 }
-
 .dropdown-item {
     background-color: var(--primary);
     color: var(--light);
     border: 0.5px solid var(--light);
 }
-
 .dropdown-item:hover,
 .dropdown-item:active,
 .dropdown-item:focus {
@@ -197,11 +169,11 @@ nav .logo {
     margin: 11px 50px 11px 0;
     max-height: 40px;
 }
-
 nav .logoU {
     max-height: 80px;
 }
 
+/*Header titles*/
 .headerTitle {
     font-size: 18px;
     margin: auto;
@@ -209,11 +181,9 @@ nav .logoU {
     text-align: left;
     text-align: center;
 }
-
 .headerTitle2 {
     display: none;
 }
-
 .fa-plus-square {
     font-size: 20px;
 }
@@ -223,25 +193,20 @@ nav .logoU {
     -webkit-animation: jello-horizontal 0.9s both;
     animation: jello-horizontal 0.9s both;
 }
-
 .secondC {
     display: none;
 }
 
 /*Carousel*/
-
 .carousel * :not(.iconCar) {
     pointer-events: none !important;
 }
-
 .iconCar {
     box-shadow: 2px 2px 7px 0.5px var(--dark) !important;
 }
-
 .carousel {
     filter: saturate(85%);
 }
-
 .carousel-caption {
     top: 0;
     left: 0;
@@ -251,16 +216,12 @@ nav .logoU {
     align-items: center;
     justify-content: center;
     text-align: center;
-    /*    background: rgba(0, 0, 0, 0.4);*/
-    /*black filter*/
     z-index: 2;
 }
-
 .carousel-control-prev,
 .carousel-control-next {
     width: 15%;
 }
-
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
     width: 3rem;
@@ -269,55 +230,45 @@ nav .logoU {
     border: 10px solid var(--primary);
     border-radius: 50%;
 }
-
 .page-header {
     background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
         url(../img/carousel-1.jpg) center center no-repeat;
     background-size: cover;
 }
-
 .breadcrumb-item + .breadcrumb-item::before {
     color: #999999;
 }
 
 /*Carousel Text*/
-
 .introText1 {
     justify-content: flex-end !important;
     margin-left: 150px;
 }
-
 .introText2 {
     justify-content: flex-start !important;
     margin-right: 150px;
 }
-
 .introText1 h1,
 .introText2 h1 {
     font-size: 35px !important;
-    /**************************************************************/
 }
 
 /***INTRO***/
 .introIcon {
     border-radius: 50%;
 }
-
 .iconTxt {
     display: flex;
 }
-
 .intro h5 {
     align-self: center;
     color: var(--dark);
 }
-
 .intro .row {
     display: flex;
     justify-content: space-between;
     margin-top: -25px;
 }
-
 .intro .row .col-lg-3 {
     background: url("../img/bckg2.webp"), var(--light);
     background-position: center;
@@ -330,17 +281,14 @@ nav .logoU {
 .about2 {
     background: unset !important;
 }
-
 .about2 .container .row .wow {
     background: unset !important;
     display: flex !important;
     align-items: center !important;
 }
-
 .about2 .container {
     background: unset !important;
 }
-
 #about .wow {
     margin-top: -5px;
     background: url("../img/bckg2.webp"), var(--light);
@@ -348,73 +296,60 @@ nav .logoU {
     background-size: cover;
     padding: 15px;
 }
-
 #about .logoBis {
     background: url("../img/bckg2.webp"), var(--light);
     background-position: center;
     background-size: cover;
 }
-
 .iconIntro {
     max-width: 75px;
     margin-right: 15px;
 }
-
 .icoW {
     display: flex;
     justify-content: space-around;
     margin-bottom: 25px;
 }
-
 #about .wow h6 {
     color: var(--secondary) !important;
 }
-
 #about .wow p {
     text-align: justify;
     color: var(--dark);
 }
-
 .eventW {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-
 .eventSub {
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
-
 .eventSub p {
     max-width: 75% !important;
 }
-
 .eventSub img {
     width: 300px !important;
     margin-right: 25px;
 }
-
 .eventHeader {
     display: flex;
     margin-bottom: 10px;
 }
-
 .eventHeader i {
     align-self: center;
     font-size: 20px;
     margin-right: 15px;
 }
-
 .eventHeader p {
     margin: 0;
     color: var(--secondary) !important;
     font-weight: bold;
     font-size: 18px;
 }
-
 .event {
     background: url("../img/bckg2.webp"), var(--light);
     background-position: center;
@@ -423,13 +358,11 @@ nav .logoU {
     padding: 15px;
     color: var(--primary);
 }
-
 .about3 {
     max-width: 25px;
     justify-self: center;
     margin: auto !important;
 }
-
 .aboutTitle {
     font-size: 25px;
     max-width: 75%;
@@ -440,18 +373,15 @@ nav .logoU {
     border-bottom: 2px solid var(--primary);
     width: fit-content;
 }
-
 #about .fadeInUp {
     padding: 15px !important;
     background: url("../img/bckg2.webp"), var(--light);
     background-position: center;
     background-size: cover;
 }
-
 #about h6 {
     margin-top: 25px;
 }
-
 .vidWrap {
     display: flex;
     justify-content: center;
@@ -462,47 +392,39 @@ nav .logoU {
 .Actu iframe {
     height: 700px !important;
 }
-
 .Actu h1 {
     text-transform: uppercase;
     background: unset !important;
     color: var(--secondary);
 }
-
 .wow2 {
     background: unset;
 }
-
+/***OUTILS***/
 /***COURSES***/
 .outils {
     margin-top: 50px;
     height: auto !important;
 }
-
 .courses p {
     text-align: center !important;
 }
-
 .courses {
     min-height: 100vh;
     height: 100vh;
 }
-
 .courses .btn-outline-primary,
 .courses a {
     color: var(--light) !important;
     border-color: var(--primary);
 }
-
 .courses-overlay {
     background: rgba(0, 0, 0, 0.7) !important;
 }
-
 .courses h1 {
     color: var(--secondary);
     background: unset !important;
 }
-
 .courses-item .courses-overlay {
     position: absolute;
     width: 100%;
@@ -517,17 +439,14 @@ nav .logoU {
     opacity: 0;
     transition: 0.5s;
 }
-
 .courses-item {
     transform: scale(1);
     transition: 0.4s;
 }
-
 .courses-item:hover .courses-overlay {
     height: 100%;
     opacity: 1;
 }
-
 .card {
     background-color: var(--primary);
     padding: 15px !important;
@@ -536,22 +455,18 @@ nav .logoU {
     flex-direction: column;
     justify-content: space-between;
 }
-
 .card2 {
     background: unset;
     margin: 25px;
     max-height: 450px;
 }
-
 .courses-item:hover {
     transform: scale(1.07);
 }
-
 .card h5,
 .card p {
     color: var(--light) !important;
 }
-
 .card h5 {
     text-transform: uppercase;
     padding-bottom: 5px;
@@ -564,23 +479,19 @@ nav .logoU {
 #témoignages p {
     text-transform: initial;
 }
-
 .testiBtn {
     width: 50%;
     margin: auto;
     max-width: 300px;
     font-size: 14px !important;
 }
-
 .testimonial-carousel .owl-dots {
     height: 40px;
     margin-top: 25px;
     display: flex;
     align-items: center;
-
     justify-content: center;
 }
-
 .testimonial-carousel .owl-dot {
     position: relative;
     display: inline-block;
@@ -592,48 +503,39 @@ nav .logoU {
     transition: 0.5s;
     background: var(--primary);
 }
-
 .testimonial-carousel .owl-dot.active {
     width: 40px;
     height: 40px;
     background: var(--secondary);
     border: 2px solid var(--secondary);
 }
-
 .testimonial-carousel .owl-item img {
     width: 150px;
     height: 150px;
 }
-
 .testiW,
-#témoignages .text-center,
-/*#équipe .text-center*/ {
+#témoignages .text-center {
     background-color: unset !important;
     text-transform: uppercase;
 }
-
 #témoignages p {
     text-transform: initial;
 }
-
 .testiW {
     background: url("../img/bckg2.webp"), var(--light);
     background-position: center;
     background-size: cover;
     padding: 15px;
 }
-
 .testiBtn {
     width: 50%;
     margin: auto;
     max-width: 300px;
     font-size: 14px !important;
 }
-
 .testiBtn i {
     color: var(--light) !important;
 }
-
 .testiFa1 {
     color: var(--secondary) !important;
 }
@@ -644,7 +546,6 @@ nav .logoU {
     display: flex;
     justify-content: center;
 }
-
 .team-item {
     padding: 0.75rem;
     background: url("../img/bckg2.webp"), var(--light);
@@ -652,46 +553,40 @@ nav .logoU {
     background-size: cover;
     margin: 10px;
 }
-
 .team-item img {
     transform: scale(1);
     transition: 1s;
 }
-
 .team-item h5 {
     transition: 0.5s;
 }
-
 .team-item:hover img {
     transform: scale(1.05);
     background: inherit !important;
 }
-
 .team-item:hover h5 {
     color: var(--secondary);
 }
-
 .team-item .text-center {
     padding: 0 !important;
     min-height: 76px;
 }
 
-/*#équipe .title*/
+/*
 section:not(#about, #intro) {
-    /*margin-top: 15vh;
-    min-height: 100vh;*/
+    margin-top: 15vh;
+    min-height: 100vh;
 }
+*/
 
 .team-item h5 {
     font-size: 16px !important;
     color: var(--primary);
 }
-
 .team-item span {
     color: var(--dark);
     font-size: 14px !important;
 }
-
 .team-item::after {
     position: absolute;
     content: "";
@@ -699,16 +594,13 @@ section:not(#about, #intro) {
     height: 0;
     top: 0;
     left: 0;
-    /*background: #ffffff;*/
     transition: 0.5s;
     z-index: -1;
 }
-
 .team-item:hover::after {
     height: 100%;
     background: var(--primary);
 }
-
 .team-item .team-social {
     position: absolute;
     width: 100%;
@@ -723,16 +615,13 @@ section:not(#about, #intro) {
     opacity: 0;
     transition: 0.5s;
 }
-
 .team-item:hover .team-social {
     height: 100%;
     opacity: 1;
 }
-
 .team-social {
     padding: 5px;
 }
-
 .team-social p {
     color: var(--light) !important;
     font-size: 12px !important;
@@ -746,27 +635,22 @@ section:not(#about, #intro) {
     padding: 10px;
     color: var(--dark) !important;
 }
-
 footer .container .row {
     display: flex !important;
     flex-direction: row-reverse !important;
 }
-
 .subFoot {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-
 .footer p {
     text-align: left !important;
 }
-
 .footer a {
     color: var(--secondary) !important;
     margin: auto;
 }
-
 .footLogo {
     display: flex;
     flex-direction: column;
@@ -774,18 +658,15 @@ footer .container .row {
     align-items: center;
     padding: 0;
 }
-
 .footLogo img {
     max-width: 80px;
 }
-
 .footLogo h4 {
     color: var(--dark) !important;
     margin-left: -25px;
     padding: 0;
     text-align: center;
 }
-
 .modalB {
     all: unset !important;
     cursor: pointer !important;
@@ -795,7 +676,6 @@ footer .container .row {
     text-align: center !important;
     border: none;
 }
-
 .modalB:hover,
 .modalB:focus,
 .modalB:active,
@@ -804,25 +684,20 @@ footer .container .row {
     color: inherit;
     border: none;
 }
-
 .modal-title {
     color: var(--secondary);
 }
-
 .modal-header {
     border-color: var(--primary);
 }
-
 .modal-body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
-
 .modal-body div {
     margin: 15px;
 }
-
 .footer .btn.btn-link {
     display: block;
     margin-bottom: 5px;
@@ -833,13 +708,11 @@ footer .container .row {
     text-transform: capitalize;
     transition: 0.3s;
 }
-
 .lastF {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
-
 .footer .btn.btn-link::before {
     position: relative;
     content: "\f105";
@@ -848,7 +721,6 @@ footer .container .row {
     color: var(--light);
     margin-right: 10px;
 }
-
 .footer .btn.btn-link:hover {
     color: var(--primary);
     letter-spacing: 1px;
@@ -857,10 +729,10 @@ footer .container .row {
 
 /***ANIMATION***/
 
+/*Main background anim*/
 body {
     animation: theme 21s linear infinite;
 }
-
 body:after,
 body:before {
     content: "";
@@ -875,18 +747,36 @@ body:before {
     background: rgba(255, 255, 255, 0.7);
     animation: background 90s linear infinite;
     pointer-events: none;
-    /*filter: blur(5px);*/
 }
-
 body:after {
     left: 15vw;
 }
-
 body:before {
     right: 15vw;
     animation-direction: alternate-reverse;
 }
 
+@keyframes theme {
+    0% {
+        background: var(--secondary);
+    }
+
+    100% {
+        background: var(--primary);
+    }
+}
+
+@keyframes background {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/*Video background anim*/
 #background-video {
     width: 100vw;
     height: 100vh;
@@ -897,13 +787,11 @@ body:before {
     top: 0;
     bottom: 0;
     z-index: -1;
-    opacity: 0.2;
-    /*main videos tests*/
     opacity: 0.5;
-    /*square*/
     filter: invert(100%);
 }
 
+/*Nav contact button anim*/
 @-webkit-keyframes jello-horizontal {
     0% {
         -webkit-transform: scale3d(1, 1, 1);
@@ -940,7 +828,6 @@ body:before {
         transform: scale3d(1, 1, 1);
     }
 }
-
 @keyframes jello-horizontal {
     0% {
         -webkit-transform: scale3d(1, 1, 1);
@@ -978,27 +865,6 @@ body:before {
     }
 }
 
-@keyframes theme {
-    0% {
-        background: var(--secondary);
-    }
-
-    100% {
-        /*background: var(--primaryLighter);*/
-        background: var(--primary);
-    }
-}
-
-@keyframes background {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
 /***RESPONSIVE***/
 
 /*----------MAX : 1396-----------*/
@@ -1014,6 +880,7 @@ body:before {
     .headerTitle {
         display: none;
     }
+
     .headerTitle2 {
         display: block;
         font-size: 25px !important;
@@ -1040,7 +907,6 @@ body:before {
         transition: 0.5s;
         padding: 0;
     }
-
     .navbar .nav-item:hover .dropdown-menu {
         top: 100%;
         visibility: visible;
@@ -1078,11 +944,9 @@ body:before {
     .introText2 h1 {
         font-size: 20px !important;
     }
-
     .introText1 {
         margin-left: 250px;
     }
-
     .introText2 {
         margin-right: 250px;
     }
@@ -1094,11 +958,9 @@ body:before {
         margin-right: 0;
         padding: 10px 0;
     }
-
     .navbar .navbar-nav {
         border-top: 1px solid #eeeeee;
     }
-
     .intro {
         position: relative;
         margin-top: -75px;
@@ -1110,7 +972,6 @@ body:before {
     .secondC {
         display: block;
     }
-
     .intro .row .col-lg-3 {
         margin: 25px !important;
     }
@@ -1133,14 +994,12 @@ body:before {
         position: relative;
         min-height: 300px;
     }
-
     #header-carousel .carouIm1 {
         object-position: center right;
     }
     #header-carousel .carouIm2 {
         object-position: center left;
     }
-
     #header-carousel .carousel-item img {
         position: absolute;
         width: 100%;
@@ -1180,7 +1039,6 @@ body:before {
     nav {
         justify-content: center !important;
     }
-
     .sub {
         display: none;
     }
